objects/SFE_EstimatedPlannedSales__c.object
<CustomObject>
    <fields>
        <fullName>AccountPlanConfidential__c</fullName>
        <label>Account Plan Confidential</label>
        <referenceTo>AccountPlanConfidential__c</referenceTo>
        <relationshipLabel>Estimated Planned Sales</relationshipLabel>
        <relationshipName>Estimated_Planned_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountPlanHLNK__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;AccountPlanConfidential__r.AccountPlan__c,AccountPlanConfidential__r.AccountPlan__r.Name ,&quot;_self&quot;)</formula>
        <label>Account Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Stores the Account Plan, Estimated Planned Sales are related to</description>
        <inlineHelpText>Please do not change the defaulted value.</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>SFE_AccPlan__c</referenceTo>
        <relationshipLabel>Estimated Planned Sales</relationshipLabel>
        <relationshipName>EstimatedPlannedSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>SR0 - Business Unit the Estimated Planned Sales is split in</description>
        <label>Business Unit (BU)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q1__c</fullName>
        <description>SR0 - Stores the estimated planned for first quarter</description>
        <label>Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <description>SR0 - Stores the estimated planned for second quarter</description>
        <label>Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <description>SR0 - Stores the estimated planned for third quarter</description>
        <label>Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThreeYearsTrend__c</fullName>
        <description>SR0 - Sales trend for the Business Unit for the next three years</description>
        <label>3 years Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>SR0 - Total of Q1 + Q2 + Q3 + Q4</description>
        <formula>Q1__c +   Q2__c + Q3__c +  Q4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Estimated Planned Sales</label>
    <nameField>
        <displayFormat>EPS-{0}</displayFormat>
        <label>Estimated Planned Sales ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimated Planned Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EPS_VR01_CurrencyConsistency</fullName>
        <active>true</active>
        <description>SR0 - Make sure selected currency is the same as account currency</description>
        <errorConditionFormula>NOT( $User.BypassVR__c )
&amp;&amp;
 TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(AccountPlanConfidential__r.AccountPlan__r.Account__r.CurrencyIsoCode)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Currency should be the same as the one selected at account level.</errorMessage>
    </validationRules>
</CustomObject>